X overflow fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,18 +1,3 @@
-html,
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
-  overflow-x: hidden;
-}
-
-th,
-td {
-  padding: 20px;
-  display: block;
-}
-
 @media (max-width: 1023px) {
   #titlediv {
     padding-top: 20px;
@@ -124,6 +109,12 @@ td {
     float: left;
     margin: 30px 12px 3px 4px;
   }
+
+  th,
+  td {
+    padding: 20px;
+    display: block;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -135,21 +126,21 @@ td {
   }
 
   #aboutmediv {
-    padding-top: 100px;
+    padding-top: 30px;
     padding-right: 400px;
     padding-bottom: 200px;
     padding-left: 400px;
   }
 
   #projectdiv {
-    padding-top: 100px;
+    padding-top: 30px;
     padding-right: 400px;
     padding-bottom: 200px;
     padding-left: 400px;
   }
 
   #contactdiv {
-    padding-top: 100px;
+    padding-top: 30px;
     padding-right: 400px;
     padding-bottom: 40px;
     padding-left: 400px;
@@ -236,6 +227,11 @@ td {
   #profile {
     float: left;
     margin: 30px 12px 3px 4px;
+  }
+
+  th,
+  td {
+    padding: 20px;
   }
 }
 
